# ai-agent-poc

./: .env.example  README.md  pyproject.toml
data/: sample_portfolio.json
src/ai_agent/: __init__.py  config.py  main.py
src/ai_agent/agent/: __init__.py  orchestrator.py  prompts.py
src/ai_agent/indexing/: __init__.py  document_store.py
src/ai_agent/models/: __init__.py  schemas.py
src/ai_agent/tools/: __init__.py  market_data.py  news_feed.py  portfolio.py
